# podcnf

./: .gitignore  pyproject.toml
notebooks/: 00_Data_Generation_Stokes.ipynb  01_SVD_and_DataTreatment.ipynb  02_Tuning_and_Training.ipynb  InverseProblem_FullData.ipynb  Stokes_Analysis.ipynb
scripts/: Tuning_and_Training.py  generate_stokes_data.py  svd_decomposition.py
src/podcnf/: DataGenerationStokes.py  Loader.py  NFmodel.py  PlottingStokes.py  Training.py  Utils.py  __init__.py
src/podcnf.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_model.py
